--- a/Inertia/data/webpage.html
+++ b/Inertia/data/webpage.html
@@ -65,6 +65,6 @@
         <!-- Scripts -->
         <script src="chart.js"></script>
         <script src="html2canvas.min.js"></script>
-        <script src="script3.js"></script>
+        <script src="scriptTest.js"></script>
     </body>
 </html>
